[package]
name = "quipi"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
gl = "0.14.0"
egui = { version = "0.26", optional = true }
thiserror = "1.0"
image = "0.24.7"
tobj = { version = "4.0", features = ["log"] }
gltf = "1.4.0"
nalgebra-glm = { version = "*", features = ["serde-serialize"] }
component-derive = { path = "./macros/component-derive" }
rand = "0.8"
rand_chacha = "*"
freetype-rs = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
field-offset = "0.3.6"

[build-dependencies]
walkdir = "2.4"

[features]
qp_editor = ["dep:egui"]

[[example]]
name = "bubbles"
path = "examples/bubbles/main.rs"
#required-features = ["qp_editor"]
