[package]
name = "quipi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
gl = "0.14.0"
thiserror = "1.0"
image = "0.24.7"
tobj = { version = "4.0", features = ["log"] }
gltf = "1.4.0"
nalgebra-glm = "*"
anymap2 = "0.13"
component-derive = { path = "./macros/component-derive" }
rand = "0.8"
rand_chacha = "*"
egui = "0.25"
freetype-rs = "0.35.0"

[build-dependencies]
walkdir = "2.4"
