[package]
name = "quipi_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
quipi_core = { path = "../quipi_core" }
egui = "0.26"
thiserror = "1.0"

[build-dependencies]
walkdir = "2.4"