[package]
name = "isometric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
thiserror = "1.0"
nalgebra-glm = "*"
quipi_3d = { path = "../../quipi_3d" }
quipi_core = { path = "../../quipi_core" }

[build-dependencies]
walkdir = "2.4"
