[package]
name = "scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
gl = "0.14.0"
thiserror = "1.0"
image = "0.24.7"
tobj = "4.0"
gltf = "1.4.0"
nalgebra-glm = "*"
engine = { path = "../../engine" }
